[gd_scene load_steps=7 format=3 uid="uid://fjbg2j860jq4"]

[ext_resource type="Script" path="res://scripts/screens.gd" id="1_hgbka"]
[ext_resource type="PackedScene" uid="uid://5n35ogx2rs6b" path="res://scenes/title_screen.tscn" id="1_rjskp"]
[ext_resource type="PackedScene" uid="uid://imj8q5tq3b4d" path="res://scenes/get_ready_screen.tscn" id="2_dancp"]
[ext_resource type="PackedScene" uid="uid://bllulyrfuroe2" path="res://scenes/pause_screen.tscn" id="4_8r2ny"]
[ext_resource type="PackedScene" uid="uid://duu35cu8ebgf" path="res://scenes/game_over_screen.tscn" id="5_l1ppp"]
[ext_resource type="PackedScene" uid="uid://cykmhatdptuu" path="res://scenes/advance_selection_screen.tscn" id="6_l8xf1"]

[node name="Screens" type="CanvasLayer"]
script = ExtResource("1_hgbka")

[node name="TitleScreen" parent="." instance=ExtResource("1_rjskp")]

[node name="GetReadyScreen" parent="." instance=ExtResource("2_dancp")]

[node name="PauseScreen" parent="." instance=ExtResource("4_8r2ny")]

[node name="GameOverScreen" parent="." instance=ExtResource("5_l1ppp")]

[node name="AdvanceSelectionScreen" parent="." instance=ExtResource("6_l8xf1")]
